# game.libretro.meteor

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/meteor/: CMakeLists.txt  meteor.txt
game.libretro.meteor/: addon.xml  addon.xml.in
gameclient.meteor/: addon.xml
